<resources>
    <string name="app_name">NUMAD22Sp_FeierGu</string>
    <string name="about_me_button">About me</string>
    <string name="clicky_button">Clicky Clicky</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="textView_clicky">Pressed: -</string>
    <string name="textView_aboutMe">Feier Gu\ngu.fei@northeastern.edu</string>
    <string name="button_linkCollector">Link Collector</string>
    <string name="textView_linkName">Name</string>
    <string name="textView_url">URL</string>
    <string name="button_linkEditPage_save">Save</string>
    <string name="button_displayLocation">display location</string>
    <string name="textView_latitude">Latitude</string>
    <string name="textView_longitude">Longitude</string>
    <string name="button_webService">web service</string>
    <string name="textView_link">Link</string>
    <string name="button_randomDog">Random Dogs</string>
    <string name="imageView_bulldog">french bulldog</string>
    <string name="loading_dialog">Loading…</string>
    <string name="dog_breed" />
    <string name="editText_breed">breed</string>
    <string name="editText_dogHint">bulldog</string>
</resources>